2006-01-28  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Test: fast/table/add-before-anonymous-child.html

        Reviewed by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5868
          Crash on HP.com with ToT and Safari 2.0.2 in khtml::RenderContainer::detach()

        * rendering/RenderTableRow.cpp:
        (WebCore::RenderTableRow::addChild): If beforeChild is inside an anonymous
        cell, insert into the cell.
        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::addChild): Changed comment.

2006-01-28  David Hyatt  <hyatt@apple.com>

        Eliminate the mask() method on Image.  It's unused.

        * platform/Image.h:
        * platform/mac/Image.mm:

2006-01-28  David Hyatt  <hyatt@apple.com>

        Clean up the Image class.  Eliminate the MIME type member variable.
        Eliminate an unused constructor.  Fix the constructor to take
        a QString rather than an NSString so that it's portable.  Rename
        the receivedData method to decode.  Move canRenderImageType into
        the Image class as a static method.

        Reviewed by mjs

        * khtml/html/html_objectimpl.cpp:
        (WebCore::HTMLObjectElementImpl::isImageType):
        * kwq/KWQLoader.h:
        * kwq/KWQLoader.mm:
        (KWQResponseMIMEType):
        * loader/CachedImage.cpp:
        (WebCore::CachedImage::data):
        * platform/Image.h:
        * platform/mac/Image.mm:
        (WebCore::Image::supportsType):
        (WebCore::Image::Image):
        (WebCore::Image::~Image):
        (WebCore::Image::decode):
        (WebCore::Image::operator=):

2006-01-28  Alexander Kellett  <lypanov@kde.org>

        Reviewed by eseidel.

        SourceAlpha does not display until window is redrawn (resized)
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6375

        Test: svg/custom/filter-source-alpha.svg

        * kcanvas/device/quartz/KCanvasFilterQuartz.mm:
        (KCanvasFilterQuartz::inputImage):
